[gd_scene load_steps=13 format=3 uid="uid://bt8oj4nktqvhi"]

[ext_resource type="Script" path="res://Enemy/enemy.gd" id="1_l4bum"]
[ext_resource type="Texture2D" uid="uid://maq54trydyxq" path="res://Art/enemy-sprites/enemies/slimeBlue.png" id="1_naitf"]
[ext_resource type="Texture2D" uid="uid://dq7gneq6jpelt" path="res://Art/enemy-sprites/enemies/slimeBlue_blue.png" id="2_mupq8"]
[ext_resource type="Texture2D" uid="uid://bagk3blr3vcy8" path="res://Art/enemy-sprites/enemies/slimeBlue_squashed.png" id="3_hope4"]

[sub_resource type="SpriteFrames" id="SpriteFrames_q8gg0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_naitf")
}, {
"duration": 1.0,
"texture": ExtResource("2_mupq8")
}],
"loop": true,
"name": &"slime",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hope4")
}],
"loop": true,
"name": &"squash",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avsw2"]
size = Vector2(43, 25)

[sub_resource type="Animation" id="Animation_xtcvv"]
resource_name = "walk"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"slime"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_0mf7n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"slime"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wigye"]
resource_name = "Squashed"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"squash"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_84iml"]
_data = {
"RESET": SubResource("Animation_0mf7n"),
"Squashed": SubResource("Animation_wigye"),
"walk": SubResource("Animation_xtcvv")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ehwyh"]
size = Vector2(39, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ug5w6"]
size = Vector2(11, 20)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_l4bum")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
sprite_frames = SubResource("SpriteFrames_q8gg0")
animation = &"slime"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -12.5)
shape = SubResource("RectangleShape2D_avsw2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_84iml")
}

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(0, 20)

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2(0.5, -30)
shape = SubResource("RectangleShape2D_ehwyh")

[node name="SidesChecker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker"]
position = Vector2(-20.5, -13)
shape = SubResource("RectangleShape2D_ug5w6")

[node name="SidesChecker2" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SidesChecker2"]
position = Vector2(22, -13)
shape = SubResource("RectangleShape2D_ug5w6")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="TopChecker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="SidesChecker" to="." method="_on_sides_checker_body_entered"]
[connection signal="body_entered" from="SidesChecker2" to="." method="_on_sides_checker_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
